# PoliMillionaire

./: .gitignore  AUDIT.md  NOTEBOOK_CHANGES.md  PoliMillionaire.ipynb  PoliMillionaire.legacy.ipynb  PoliMillionaire_final.ipynb  README.md  pyproject.toml
docs/: RAG_System_Audit.md  evaluation_explained.html  index.html  polimillionaire_complete.html  rag_explained.html  rag_rebuild.md  strategies_explained.html  tools_explained.html  video_speech.md
docs/layers_doc/: evaluation_explained.html  game_explained.html  index.html  polimillionaire.html  prompts_explained.html  rag_explained.html  strategies_explained.html  tools_explained.html
millionaire_client/: base.py  client.py  game.py  leaderboard.py  models.py
polimibot/: __init__.py  config.py  logging_utils.py  observability.py  runner.py
polimibot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
polimibot/eval/: __init__.py  calibration.py  evaluator.py  gold_set.py  make_leaderboard.py  profiler.py  report_io.py  retrieval.py  threshold_calibration.py  wrong_set.py
polimibot/game/: __init__.py  adapter.py  types.py
polimibot/models/: __init__.py  llm.py  mock.py  speech.py
polimibot/prompts/: __init__.py  templates.py
polimibot/rag/: __init__.py  bm25.py  category_seeds.py  chunker.py  corpus.py  embedder.py  fusion.py  index.py  index_grower.py  live_search.py  news_search.py  reranker.py  retriever.py
polimibot/strategies/: __init__.py  agent_strategy.py  base.py  confidence_gated_strategy.py  confidence_tool_strategy.py  (+8 more)
scripts/: _build_notebook.py  _insert_notebook_cell.py  _session.py  build_gold_set.py  build_rag_index.py  build_wrong_set.py  calibrate_min_score.py  eval_agent.py  eval_ensemble.py  eval_rag.py  eval_rag_delta.py  eval_tiered.py  eval_tools.py  fetch_news_corpus.py  mine_corpus_gaps.py  play_baseline.py  plot_calibration.py  profile_strategies.py  smoke_game.py  sweep_tiers.py
tests/: conftest.py  test_bm25.py  test_category_seeds.py  test_confidence_gated.py  test_config.py  test_corpus.py  test_embedder.py  test_eval.py  test_fusion.py  test_index_grower.py  test_live_search.py  test_llm_baseline.py  test_logging.py  test_mine_corpus_gaps.py  test_news_search.py  test_prompts.py  test_rag.py  test_rag_strategy.py  test_reranker.py  test_retrieval.py  test_runner.py  test_strategies.py  test_threshold_calibration.py  test_tools.py
(+7 files in other folders)
