[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polimibot"
version = "0.0.2"
description = "Chatbot for the PoliMillionaire NLP 2025/26 assignment."
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[tool.setuptools.packages.find]
include = ["polimibot*"]

[project.optional-dependencies]
dev = ["pytest>=8"]