[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polimibot"
version = "0.1.0"
description = "Chatbot for the PoliMillionaire NLP 2025/26 assignment."
requires-python = ">=3.11"
dependencies = ["requests>=2.31"]

[tool.setuptools.packages.find]
include = ["polimibot*"]

[project.optional-dependencies]
dev = ["pytest>=8"]
llm = [
    "transformers>=4.44",
    "accelerate>=0.33",
    "bitsandbytes>=0.43",
]
rag = [
    "faiss-cpu>=1.7",
    "sentence-transformers>=2.7",
    "wikipedia>=1.4",
]